--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,13 +7,16 @@
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
 }
+html {
+  overflow-x: hidden;
+}
 
 .loginbody,
 .signupbody {
   margin: 0;
   background-image: url("./background.jpg");
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
